hphp/hack/test/typecheck/ambiguous_constructor.php.exp
File "ambiguous_constructor.php", line 6, characters 19-29:
T2 and T1 both declare ambiguous implementations of __construct. (Typing[4285])
File "ambiguous_constructor.php", line 6, characters 19-29:
T2's definition is here.
File "ambiguous_constructor.php", line 3, characters 19-29:
T1's definition is here.
File "ambiguous_constructor.php", line 6, characters 19-29:
Redeclare __construct in C with a compatible signature.
